# stat362

./: .gitignore  pyproject.toml  test_env.html  test_env.ipynb
instructor/Assignment 1/: HW1_binary.ipynb
instructor/hw1/: HW1_binary.ipynb
instructor/hw2/: HW2_cnn_template.ipynb  HW2_nlp_template.ipynb  HW2_rnn_ts_template.ipynb
instructor/quizzes/week 3/: gd_mlr.ipynb
instructor/quizzes/week 6/l_layer_nn/: l_layer_mlp.ipynb
instructor/quizzes/week 7/: softmax.ipynb
instructor/quizzes/week 7/images/: Multiclass_Classification_in_Python.ipynb
instructor/quizzes/week 8/: Keras_PyTorch.ipynb  cnn_resnet50_template.ipynb  lstm_time_series_template.ipynb
instructor/quizzes/week 9/: KMeans.ipynb
student/: HW1_binary.html  HW1_binary.ipynb  gd_mlr.html  gd_mlr.ipynb  gd_slr.html  gd_slr.ipynb  regularized_gd.html  regularized_gd.ipynb  vectorized_gd.html  vectorized_gd.ipynb
student/hw2/: HW2_cnn_template.ipynb
student/l_layer_nn/: l_layer_mlp.html  l_layer_mlp.ipynb
student/two_layer_mlp/: two_layer_mlp.html  two_layer_mlp.ipynb
student/week 5/: NN_logistic_regression.html  NN_logistic_regression.ipynb
student/week 7/: softmax.ipynb
student/week 7/initialization/: init_utils.py  initialization.html  initialization.ipynb
student/week 7/optimization/: opt_utils.py  optimization.html  optimization.ipynb
student/week 7/regularization/: Regularization.ipynb
student/week 8/: Keras_PyTorch.ipynb  cnn_resnet50_template.html  cnn_resnet50_template.ipynb  lstm_time_series_template.html  lstm_time_series_template.ipynb
student/week 9/: KMeans.ipynb
(+3 files in other folders)
