[tool.poetry]
name = "stat362"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.14"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.0"
datasets = "^3.6.0"
ipywidgets = "^8.1.7"
nltk = "^3.9.1"
torch = "^2.7.1"
torchsummary = "^1.5.1"
seaborn = "^0.13.2"
transformers = "^4.52.4"


umap-learn = "^0.5.7"
plotly = "^6.2.0"
sentence-transformers = "^5.1.0"
pandas = "^2.3.2"
pyarrow = "^22.0.0"
pytest = "^8.4.2"
torchvision = "^0.24.0"
torchaudio = "^2.9.0"
tensorflow-macos = "2.16.2"
tensorflow-metal = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
